[package]
name = "ping-pong-rewa"
version = "0.0.2"
authors = [ "Bruda Claudiu-Marcel <claudiu725@yahoo.com>",]
edition = "2018"
publish = false

[lib]
path = "src/ping_pong.rs"

[dependencies.numbat-wasm]
version = "0.34.0"
path = "../../../numbat-wasm"

[dev-dependencies.numbat-wasm-debug]
version = "0.34.0"
path = "../../../numbat-wasm-debug"

