[package]
name = "benchmark-common"
version = "0.0.0"
authors = ["Claudiu-Marcel Bruda <claudiu.bruda@dharitri.org>"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.numbat-wasm]
version = "0.34.0"
path = "../../../../numbat-wasm"

[dev-dependencies.numbat-wasm-debug]
version = "0.34.0"
path = "../../../../numbat-wasm-debug"
